# PCL_Dachstuhl2016

./: Abschlusspräsentation.pptx  Abschlusspräsentation_20170124.odp  Abschlusspräsentation_20170124.pptx  Abschlusspräsentation_BabettWF.pptx  Abschlusspräsentation_loren.pptx  Projekt_PCL-V02.doc  Projekt_PCL-V03.doc  Projekt_PCL-V04.doc  Projekt_PCL-V05.doc  Projekt_PCL-V06.doc  Projekt_PCL-V07.doc  Projekt_PCL-V08.doc  Projekt_PCL-V09.doc  Projekt_PCL-V10.doc  Projekt_PCL-V11.doc  Projekt_PCL-V12.doc  Projekt_PCL-V14.doc  Projekt_PCL-V15.doc  Projekt_PCL-V20.doc  Projekt_PCL-V20170126.doc  Projektbericht_Notizen.doc  fit_rectangle.py  loren.docx  loren.odt  toolbox.sh  vector.py  workflow1.sh  workflow2.sh  workflow3.sh  workflow5-extracted-balken.sh  workflow5.sh  ~$ojekt_PCL-V12.doc
Extracting/src/: extracting.cpp
GroundFilter_Eclipse/src/: CMakeLists.txt  balken_stuempfe_cut.ply  ground_filter.cpp
extract_planes/src/: extract_planes.cpp
remove_walls/src/: CMakeLists.txt  remove_walls.cpp
toolbox/: extract.cpp  extracting.cpp  toolbox.cpp
